@@ -14,6 +14,12 @@ v4.3.0-git
 v4.2.2
 ------
 
+[mjr] Fix missing startdate field for recurring tasks synchronized via
+      ActiveSync (Bug #13636).
+[jan] Pass current start date of recurring tasks to dynamic interface.
+[jan] Fix setting task list name for external tasks.
+[jan] Fix link to create sub-task from a task view.
+[jan] Fix listing of recurring tasks with start dates.
 [mjr] Add missing categories to EAS tasks.
 [jan] Fix sidebar display of system task lists in basic view.
 [jan] Fix retrieving individual tasks via WebDAV.
